crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__types.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "activity": "toyplay",
        "design": "cross",
        "group": "SLI",
        "type": "types"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Illustrate the Types header, which has exactly three fields: design, activity, group",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 280,
                "start": 277
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "man",
                  "type": "text"
                }
              ],
              "raw_text": "man",
              "span": {
                "end": 284,
                "start": 281
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 289,
                "start": 285
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 292,
                "start": 290
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 296,
                "start": 293
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "world",
                  "type": "text"
                }
              ],
              "raw_text": "world",
              "span": {
                "end": 302,
                "start": 297
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "isn't",
                  "type": "text"
                }
              ],
              "raw_text": "isn't",
              "span": {
                "end": 308,
                "start": 303
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 313,
                "start": 309
              },
              "type": "word"
            },
            {
              "replacement": {
                "words": [
                  {
                    "content": [
                      {
                        "content": "going",
                        "type": "text"
                      }
                    ],
                    "raw_text": "going",
                    "span": {
                      "end": 328,
                      "start": 323
                    }
                  },
                  {
                    "content": [
                      {
                        "content": "to",
                        "type": "text"
                      }
                    ],
                    "raw_text": "to",
                    "span": {
                      "end": 331,
                      "start": 329
                    }
                  }
                ]
              },
              "type": "replaced_word",
              "word": {
                "content": [
                  {
                    "content": "gonna",
                    "type": "text"
                  }
                ],
                "raw_text": "gonna",
                "span": {
                  "end": 319,
                  "start": 314
                }
              }
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 344,
                "start": 341
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a/c",
                  "type": "text"
                }
              ],
              "raw_text": "a/c",
              "span": {
                "end": 348,
                "start": 345
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 353,
                "start": 349
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 356,
                "start": 354
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 360,
                "start": 357
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "universe",
                  "type": "text"
                }
              ],
              "raw_text": "universe",
              "span": {
                "end": 369,
                "start": 361
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 372,
                "start": 370
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 375,
                "start": 373
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 380,
                "start": 376
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "fé",
                  "type": "text"
                }
              ],
              "raw_text": "fé",
              "span": {
                "end": 384,
                "start": 381
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
